View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026532 | Community | OCCT:Mesh | public | 2015-08-07 12:07 | 2015-11-25 15:29 |
Reporter | Timo | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026532: Meshing of edge with minSize parameter leads to incorrect result | ||||
Description | For the appended edge, the meshing with minSize parameter leads to a wrong, unexpected result. The polygon node distribution is quite asymmetric. The last two polygon segments are very large. In consequence, the visualization of the edge is not smooth. This seems to be a bug because a minSize of 0.06 should not lead to such a coarse visualization because the model is quite big (curve length ~ 1200). | ||||
Steps To Reproduce | # with min size restore Aal2.brep a vdisplay a vclear incmesh a 0.3 -min 0.06 vdisplay a => ugly curve # without min size restore Aal2.brep a vdisplay a vclear incmesh a 0.3 vdisplay a => nice curve | ||||
Tags | No tags attached. | ||||
Test case number | bugs mesh bug26532 | ||||
|
Aal2.brep (3,749 bytes) |
|
not smooth edge visualization with minsize.png (40,348 bytes) |
|
smooth edge visualization without minsize.png (24,575 bytes) |
|
Branch CR26532 has been created by oan. SHA-1: 673ed324344134c90a68f6fc27355d4c67d831a9 Detailed log of new commits: Author: oan Date: Wed Sep 16 15:57:29 2015 +0300 0026532: Meshing of edge with minSize parameter leads to incorrect result Fix missed parameter. |
|
Dear Mikhail, could you please review the fix at branch CR26532. |
|
Reviewed. |
|
Dear BugMaster, Branch CR26532 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 673ed324344134c90a68f6fc27355d4c67d831a9 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26532-master-occt-64/Debian70-64/bugs/mesh/bug26532.html http://occt-tests/CR26532-master-occt-64/Windows-64-VC10/bugs/mesh/bug26532.html bugs mesh bug26532: OK Testing on Linux: occt component : Total MEMORY difference: 92175374 / 92763477 [-0.63%] Total CPU difference: 18078.759999999078 / 17943.299999999086 [+0.75%] products component : Total MEMORY difference: 25861501 / 25875135 [-0.05%] Total CPU difference: 7212.699999999991 / 7185.6699999999955 [+0.38%] Testing on Windows: occt component : Total MEMORY difference: 57715737 / 57708424 [+0.01%] Total CPU difference: 16589.271140798977 / 16459.571909399227 [+0.79%] products component : Total MEMORY difference: 16782689 / 16782651 [+0.00%] Total CPU difference: 5697.250120599973 / 5565.444875699965 [+2.37%] There are no differences in images found by testdiff. |
|
Branch CR26532 has been updated by mkv. SHA-1: 7415426e25ba8001920766e4e6470de69b82a2fa Detailed log of new commits: Author: mkv Date: Thu Sep 17 12:28:31 2015 +0300 Test case for issue CR26532 |
|
Dear oan, could you please review following test case bugs mesh bug26532 |
|
Dear Mikhail, current implementation of test has no meaning due to absence of any logical check. It is necessary to add check for equality of number of discretization points (and their coordinates) due to the fact that such a small restriction for min size parameter plays no role for resulting number of points. Info about discretization points can be taken using dump command, part "Dump of 1 Polygon3Ds" |
|
Dear oan, test case bugs mesh bug26532 will be corrected tomorrow. |
|
You can try using the command trinfo instead of dump to evaluate the number of mesh nodes. |
|
trinfo will give nothing in this case as far as it reports info about triangulation stored in the shape. In this case it is just a free edge and BRepMesh stores discretization inside Poly_Polygon3D that is not considered by trinfo. |
|
Branch CR26532 has been updated by mkv. SHA-1: a2bb64c900c34af8ed47d0dd6de7d7c9565f39e9 Detailed log of new commits: Author: mkv Date: Fri Sep 18 12:36:04 2015 +0300 Correction of test case for issue CR26532 |
|
Dear oan, test case bugs mesh bug26532 was corrected and pushed to branch CR26532 of occt git-repository, could you please review it http://occt-tests/CR26532-master-occt-64/Debian70-64/bugs/mesh/bug26532.html http://occt-tests/CR26532-master-occt-64/Windows-64-VC10/bugs/mesh/bug26532.html |
|
Dear Mikhail, test script does not work properly. I have tried to use "incmesh a 0.3 -min 100" instead of "incmesh a 0.3 -min 0.06" but test is still OK while number of points and their coordinates should be different. Please modify test case and check it. Note that shape should be restored twice, not only at the beginning of the script, but before each incmesh as far as algorithm overrides existing triangulation only if deflection of existing polygon is greater than specified. |
|
Branch CR26532 has been updated by mkv. SHA-1: 9bb262e526f30100be0e5fd00349b0d3d48fd0e4 Detailed log of new commits: Author: mkv Date: Fri Sep 18 13:22:49 2015 +0300 Correction of test case for issue CR26532 |
|
Dear BugMaster, test case bugs mesh bug26532 was corrected and pushed to branch CR26532 of occt git-repository, Dear BugMaster, Branch CR26532 is TESTED. |
|
Branch CR26532 has been deleted by kgv. SHA-1: 9bb262e526f30100be0e5fd00349b0d3d48fd0e4 |
occt: master 127cc1f0 2015-09-17 11:58:40 Committer: bugmaster Details Diff |
0026532: Meshing of edge with minSize parameter leads to incorrect result Fix missed parameter. Test case for issue CR26532 |
Affected Issues 0026532 |
|
mod - src/BRepMesh/BRepMesh_IncrementalMesh.cxx | Diff File | ||
add - tests/bugs/mesh/bug26532 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-07 12:07 | Timo | New Issue | |
2015-08-07 12:07 | Timo | Assigned To | => oan |
2015-08-07 12:07 | Timo | File Added: Aal2.brep | |
2015-08-07 12:07 | Timo | File Added: not smooth edge visualization with minsize.png | |
2015-08-07 12:09 | Timo | File Added: smooth edge visualization without minsize.png | |
2015-08-07 12:57 | Timo | Relationship added | related to 0026533 |
2015-09-16 15:58 | git | Note Added: 0045722 | |
2015-09-16 15:59 | oan | Note Added: 0045723 | |
2015-09-16 15:59 | oan | Assigned To | oan => msv |
2015-09-16 15:59 | oan | Status | new => resolved |
2015-09-16 17:22 |
|
Description Updated | |
2015-09-16 17:28 |
|
Note Added: 0045731 | |
2015-09-16 17:28 |
|
Assigned To | msv => bugmaster |
2015-09-16 17:28 |
|
Status | resolved => reviewed |
2015-09-16 18:33 |
|
Assigned To | bugmaster => mkv |
2015-09-17 12:28 |
|
Note Added: 0045762 | |
2015-09-17 12:28 | git | Note Added: 0045763 | |
2015-09-17 12:29 |
|
Note Added: 0045764 | |
2015-09-17 12:29 |
|
Assigned To | mkv => oan |
2015-09-17 12:29 |
|
Status | reviewed => feedback |
2015-09-17 12:29 |
|
Test case number | => bugs mesh bug26532 |
2015-09-17 14:05 | oan | Note Added: 0045786 | |
2015-09-17 14:05 | oan | Assigned To | oan => mkv |
2015-09-17 14:05 | oan | Status | feedback => assigned |
2015-09-17 14:56 |
|
Note Added: 0045802 | |
2015-09-17 14:56 |
|
Status | assigned => feedback |
2015-09-17 14:56 |
|
Assigned To | mkv => bugmaster |
2015-09-17 14:56 |
|
Status | feedback => tested |
2015-09-17 16:44 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-09-17 17:55 |
|
Note Added: 0045826 | |
2015-09-17 18:00 | oan | Note Added: 0045827 | |
2015-09-18 12:36 | git | Note Added: 0045873 | |
2015-09-18 12:41 |
|
Note Added: 0045874 | |
2015-09-18 13:09 | oan | Note Added: 0045877 | |
2015-09-18 13:22 | git | Note Added: 0045880 | |
2015-09-18 13:24 |
|
Note Added: 0045881 | |
2015-09-18 13:31 | bugmaster | Changeset attached | => occt master 127cc1f0 |
2015-09-18 13:31 | bugmaster | Status | tested => verified |
2015-09-18 13:31 | bugmaster | Resolution | open => fixed |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:37 | git | Note Added: 0046984 | |
2015-10-23 20:50 |
|
Fixed in Version | => 6.9.1 |
2015-11-25 15:29 | Timo | Relationship added | related to 0026928 |