0026532: Meshing of edge with minSize parameter leads to incorrect result

Fix missed parameter.

Test case for issue CR26532